--- a/web/pub.html
+++ b/web/pub.html
@@ -207,8 +207,23 @@
                           pp. 271-278, 2012</li>
                               </ol>
                             </li>
-                            <br>
-                            <br>
+                                <br>
+                                    <li><b>Ongoing work:</b><br>
+                      <ol type="1" start = "20">
+                        <li>
+                                Tong Cao, Jiangshan Yu, Jérémie Decouchant, Xiapu Luo, Paulo Veríssimo.
+                                <br>
+                                  <b><a href="https://eprint.iacr.org/2019/411"> Exploring the Monero
+                                      Peer-to-Peer Network.
+                                  </a></b> <br><i>IACR ePrint</i>.
+                                  </li>
+                                  <li>Joao Chervinski, Diego Kreutz, Jiangshan Yu.                                 <br>
+                                      <b><a href="https://eprint.iacr.org/2019/455"> FloodXMR: Low-cost transaction flooding attack with Monero's bulletproof protocol.</a></b> <br><i>IACR ePrint</i>.</li>
+                                      <li>Runchao Han, Zhimei Sui, Jiangshan Yu, Joseph Liu, and Shiping Chen.                                 <br>
+                                          <b><a href="https://eprint.iacr.org/2019/752"> Sucker punch makes you richer: Rethinking Proof-of-Work security model.</a></b> <br><i>IACR ePrint</i>.</li>
+  <li>Lingjuan Lyu, Jiangshan Yu, Karthik Nandakumar, Yitong Li, Xingjun Ma, and Jiong Jin<br>
+                                          <b><a href="https://arxiv.org/abs/1906.01167">Towards Fair and Decentralized Privacy-Preserving Deep Learning with Blockchain</a></b> <br><i>arXiv</i>.</li>
+                        </ol> </li><br>
                             <li><b>Patent:</b><br>
                               <ul type="circle">
                                 <li>
@@ -239,7 +254,8 @@
                                     Science and Software Engineering, University
                                     of Wollongong, 2012.</li>
                                   </ul>
-                                </li>
+                                      </li>
+
                                 </h3>
 
                               </div>
