--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@ ourg.">
                             good PhD students to work with. If this is
                             you, do apply! <br> <a href="doc/phd_position.txt">More info.</a>
 
-                            <br><br><b>
+                            <br><br>
+
+                            <b>A list of projects for Honours and/or Master Thesis is <a href="doc/projects.pdf">here</a>.</b><br><br>
+                            <br><b>
                               Contact:</b>
                             <br><a href="images/email/email1.png"><img style="width:
                         190px; height: 30px"
