--- a/web/pub.html
+++ b/web/pub.html
@@ -53,7 +53,7 @@
                                   Verissimo. <br><b><a href="https://eprint.iacr.org/2018/239.pdf">"RepuCoin: Your
                                   Reputation is Your Power"</a></b>.<br>
                                   <i>
-                                    IEEE Transactions on Computers (<b>IEEE TC</b>).
+                                    IEEE Transactions on Computers (<b>IEEE TC</b>),
                                   </i> 2019.
                                 </li>
 
@@ -65,11 +65,15 @@
                                   <i>
                                     ACM Transactions on Privacy and
                           Security (<b>ACM TOPS</b>, previously known as ACM
-                          TISSEC.)
+                          TISSEC),
                                   </i> 2019. (<a href="../doc/paper/ANCHOR-proof.zip">Tamarin
                                   code</a>)
                                 </li>
-
+                          <li>
+                            Bin Yua, Joseph Liu, Surya Nepal, Jiangshan Yu, Paul Rimba. <br> <b>
+                            "Proof-of-QoS: QoS Based Blockchain Consensus Protocol"</b>, <br> <i><b>Computers & Security</b>,
+                            2019.</i>
+                          </li>
                                 <li>
                                   Diego Kreutz, Jiangshan Yu, Paulo
                                   Verissimo, Catia Magalhaes, and Fernando
@@ -128,7 +132,7 @@
                         </li>
                         <br>
                                 <li><b>Conference:</b><br>
-                      <ol type="1" start = "9">
+                      <ol type="1" start = "10">
                            <li>
                           Jiangshan Yu, Man Ho Allen Au, and Paulo
                           Verissimo.<br> <b><a href="https://eprint.iacr.org/2019/186.pdf">Re-thinking untraceability in the
@@ -164,7 +168,15 @@
                             "Evaluating DAG-based Blockchains for
                             IoT"</b>, <br> <i>IEEE <b>TrustCom</b>
                             2019.</i>
-                          </li>
+                              </li>
+                              <li>
+                            Chaochen Shi and Jiangshan Yu. <br> <b> "A
+                            Hidden Markov Model-Based Method for
+                            Virtual Machine Anomaly
+                            Detection"</b>, <br> <i><b>Provsec</b>
+                            2019.</i>
+                                  </li>
+
                           <li>
                             Runchao Han, Jiangshan Yu, Joseph Liu, and
                             Peng Zhang. <br> <a href="http://xxhb.fjnu.edu.cn/_upload/tpl/06/5d/1629/template1629/papers/17.pdf"><b>"Evaluating
@@ -209,7 +221,7 @@
                             </li>
                                 <br>
                                     <li><b>Ongoing work:</b><br>
-                      <ol type="1" start = "20">
+                      <ul>
                         <li>
                                 Tong Cao, Jiangshan Yu, Jérémie Decouchant, Xiapu Luo, Paulo Veríssimo.
                                 <br>
@@ -221,9 +233,12 @@
                                       <b><a href="https://eprint.iacr.org/2019/455"> FloodXMR: Low-cost transaction flooding attack with Monero's bulletproof protocol.</a></b> <br><i>IACR ePrint</i>.</li>
                                       <li>Runchao Han, Zhimei Sui, Jiangshan Yu, Joseph Liu, and Shiping Chen.                                 <br>
                                           <b><a href="https://eprint.iacr.org/2019/752"> Sucker punch makes you richer: Rethinking Proof-of-Work security model.</a></b> <br><i>IACR ePrint</i>.</li>
-  <li>Lingjuan Lyu, Jiangshan Yu, Karthik Nandakumar, Yitong Li, Xingjun Ma, and Jiong Jin<br>
-                                          <b><a href="https://arxiv.org/abs/1906.01167">Towards Fair and Decentralized Privacy-Preserving Deep Learning with Blockchain</a></b> <br><i>arXiv</i>.</li>
-                        </ol> </li><br>
+
+                                        <li>Wei Zhang, Jiangshan Yu, Qingqiang He, and Nan Guan.                                 <br>
+                                            <b><a href="https://eprint.iacr.org/2019/792">TICK: Tiny Client for Blockchains.</a></b> <br><i>IACR ePrint</i>.</li>
+                                              <li>Lingjuan Lyu, Jiangshan Yu, Karthik Nandakumar, Yitong Li, Xingjun Ma, and Jiong Jin<br>
+      <b><a href="https://arxiv.org/abs/1906.01167">Towards Fair and Decentralized Privacy-Preserving Deep Learning with Blockchain</a></b> <br><i>arXiv</i>.</li>
+                        </ul> </li><br>
                             <li><b>Patent:</b><br>
                               <ul type="circle">
                                 <li>
