--- a/index.html
+++ b/index.html
@@ -494,7 +494,13 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                International Symposium on Reliable
                                Distributed Systems (<b>SRDS</b>) 2019.</i>
                            </li>
-
+                              <li>
+                            Runchao Han, Haoyu Lin, and Jiangshan
+                            Yu. <br> <b> "On the optionality and
+                            fairness of Atomic
+                            Swaps"</b>, <br> <i>ACM Advances in Financial Technology (<b>AFT</b>)
+                            2019.</i>
+                              </li>
                           <li>
                             Kevin Milner, Cas Cremers, Jiangshan Yu, and
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
@@ -502,11 +508,6 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             Foundations, Design Principles, and
                             Applications"</b></a>. <br> <i> IEEE <b>CSF</b> 2017.
                             </i>
-                          </li>
-                           <li>
-                            Jiangshan Yu, Mark Ryan, and Liqun
-                            Chen. <br> <a href="http://eprint.iacr.org/2017/485.pdf"><b>"Authenticating
-                            compromisable storage systems"</b></a>, <br> <i>IEEE <b>TrustCom</b> 2017.</i>
                           </li>
                               </ol>
 
