--- a/web/pub.html
+++ b/web/pub.html
@@ -31,7 +31,6 @@
             <div class="yui-u">
 
               <div class="uni last">
-                <h3>
                   <ul type="square">
                     <li><b>Book Chapter:</b><br>
                       <ol type="1">
@@ -45,8 +44,9 @@
                         </ol>
                         </li>
 <br>
-                        <li><b>Journal:</b><br>
-                      <ol type="1" start = "2">
+  <li><b>Journal:</b><br>
+      2019
+                            <ol type="1" start = "2">
                                 <li>
                                   Jiangshan Yu, David Kozhaya, Jeremie
                                   Decouchant, and Paulo
@@ -73,7 +73,10 @@
                             Bin Yua, Joseph Liu, Surya Nepal, Jiangshan Yu, Paul Rimba. <br> <b>
                             "Proof-of-QoS: QoS Based Blockchain Consensus Protocol"</b>, <br> <i><b>Computers & Security</b>,
                             2019.</i>
-                          </li>
+                              </li>
+                            </ol>
+                                  2018
+                            <ol type="1" start = "5">
                                 <li>
                                   Diego Kreutz, Jiangshan Yu, Paulo
                                   Verissimo, Catia Magalhaes, and Fernando
@@ -96,13 +99,16 @@
                                     Vol. 13, No.1, pp. 106-118,
                                     2018. (<a href="../doc/paper/DECIM-proof.zip">Tamarin
                                     code</a>)
-                                </li>
+                                    </li>
+                                  </ol>
+                                  2013-2016
+                            <ol type="1" start = "7">
                           <li>
                             Jiangshan Yu, Vincent Cheval, and Mark
                             Ryan. <br><a href="https://arxiv.org/pdf/1408.1023.pdf"><b>"DTKI:
                             a new formalized PKI with verifiable
                             trusted parties"</b></a>. <br><i> <b>The
-                            computer Journal </b></i>, Vol. 59, No. 11,
+                            computer journal </b></i>, Vol. 59, No. 11,
                             pp. 1695-1713,
                             2016. (<a href="../doc/paper/DTKI-proof.zip">Tamarin
                             code</a>
@@ -131,7 +137,8 @@
                         </ol>
                         </li>
                         <br>
-                                <li><b>Conference:</b><br>
+                          <li><b>Conference:</b><br>
+                              2019
                       <ol type="1" start = "10">
                            <li>
                           Jiangshan Yu, Man Ho Allen Au, and Paulo
@@ -162,7 +169,14 @@
                                Streaming.</a></b> <br><i>The 38th IEEE
                                International Symposium on Reliable
                                Distributed Systems (<b>SRDS</b>) 2019.</i>
-                           </li>
+                             </li>
+                              <li>
+                            Runchao Han, Haoyu Lin, and Jiangshan
+                            Yu. <br> <b> "On the optionality and
+                            fairness of Atomic
+                            Swaps"</b>, <br> <i>ACM Advances in Financial Technology (<b>AFT</b>)
+                            2019.</i>
+                              </li>
                           <li>
                             Liangrong Zhao and Jiangshan Yu. <br> <b>
                             "Evaluating DAG-based Blockchains for
@@ -176,7 +190,9 @@
                             Detection"</b>, <br> <i><b>Provsec</b>
                             2019.</i>
                                   </li>
-
+                            </ol>
+                                  2012-2018
+                            <ol type="1" start = "17">
                           <li>
                             Runchao Han, Jiangshan Yu, Joseph Liu, and
                             Peng Zhang. <br> <a href="http://xxhb.fjnu.edu.cn/_upload/tpl/06/5d/1629/template1629/papers/17.pdf"><b>"Evaluating
@@ -267,7 +283,9 @@
                                     and Systems'</a>. <i>Master of Computer
                                     Science (Research)</i>, School of Computer
                                     Science and Software Engineering, University
-                                    of Wollongong, 2012.</li>
+                                    of Wollongong, 2012. (Supervised
+                                  by <a href="https://scholar.google.com.au/citations?user=QFDtSBIAAAAJ&hl=en">
+                                  Dr. Guilin Wang</a> and <a href="https://sites.google.com/view/yi-mu-home-page/home">Prof. Yi Mu</a>)</li>
                                   </ul>
                                       </li>
 
@@ -281,7 +299,7 @@
                 </div><!--// bd -->
 
       <div id="ft">
-        <p>Last update: May 2019</p>
+        <p>Last update: July 2019</p>
                         <p>Jiangshan Yu
                         &mdash; <a href="mailto:J.yu.research@gmail.com">J.yu.research@gmail.com</a> </p><!--&mdash;
                         (313) - 867-5309</p>-->
