--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@ ourg.">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li>
+                            <b>[2019-07-29]</b> Our paper "On the
+                            optionality and fairness of Atomic Swaps"
+                            has been accepted by ACM Advances in
+                            Financial Technology (<b>AFT</b>).
+                           </li>
+                          <li>
                             <b>[2019-06-26]</b> Our paper on
                                   Privacy-Preserving Live Streaming
                                   has been accepted by <b>SRDS'19</b>.
