--- a/web/pub.html
+++ b/web/pub.html
@@ -70,7 +70,7 @@
                                   code</a>)
                                 </li>
                           <li>
-                            Bin Yua, Joseph Liu, Surya Nepal, Jiangshan Yu, Paul Rimba. <br> <b>
+                            Bin Yu, Joseph Liu, Surya Nepal, Jiangshan Yu, Paul Rimba. <br> <b>
                             "Proof-of-QoS: QoS Based Blockchain Consensus Protocol"</b>, <br> <i><b>Computers & Security</b>,
                             2019.</i>
                               </li>
