--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Today,</i> etc.
                             <hr class="team_hr team_hr_right hr_gray" />
                         </div>
 <br><br><br>
-            <div class="col-lg-offset-0">
+            <div class="col-lg-offset-0" style="margin-left: 2em;margin-right: 1em;">
               <font size="5">
                           <b>
                             Main research impact:
