--- a/index.html
+++ b/index.html
@@ -788,6 +788,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li><i>
                                       IEEE Transactions on Industrial Informatics <b>(IEEE TII)</b>
                                 </i></li>
+                                <li><i>
+                                      IEEE Transactions on Emerging Topics in Computing <b>(IEEE TETC)</b>
+                                </i></li>
                                 <li><i>IEEE Wireless Communications</i></li>
                                 <li><i>IEEE Access</i></li>
                                 <li><i>IEEE Software</i></li>
