--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@ ourg.">
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                            <li> <b> [2019-08-22]
+                              </b>I'm very proud to receive the Dean's
+                                    Award for Excellence in Research
+                                    Impact! </li>
                           <li>
                             <b>[2019-07-29]</b> Our paper "On the
                             optionality and fairness of Atomic Swaps"
@@ -595,6 +599,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Awards:</b><br>
 	                      <ol type="circle">
+                                <li> <b>Dean's Award for
+                                    Excellence in Research Impact
+                                  </b>, Monash university, Australia,
+                                  2019. </li>
+
                                 <li> <b>Finalist (Technology
                                   Application) for Endeavour
                                   Awards</b>, Premier Awards Program
