--- a/index.html
+++ b/index.html
@@ -715,8 +715,15 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 </a>, Birmingham, United Kingdom, 2015.</li>
                               </ul><br>
                             <li><b>Comference Program Committee Member</b></li>
+                            <b>2020</b>
+                            <ul type="circle">
+                              <li>
+                                IEEE International Conference on
+                                Communications <b>(IEEE ICC)</b>
+                              </li>
+                            </ul>
                             <b>2019</b>
-                              <ul type="circle">
+                            <ul type="circle">
                                 <li>
                                 The 38th IEEE International Symposium on
                                 Reliable Distributed
