update on phd opennings

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ ourg.">
 
                             My life would be happier if I found very
                             good PhD students to work with. If this is
-                            you, do apply! <br> <a href="doc/phd_position.txt">More info.</a>
+                            you, do apply! <br> <a href="doc/phd_position.html">More info.</a>
 
                             <br><br>
 
