--- a/index.html
+++ b/index.html
@@ -828,6 +828,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li><i>
                                       IEEE Transactions on Dependable and Secure Computing <b>(IEEE TDSC)</b>
                                 </i></li>
+                                <li><i> IEEE Internet of Things Journal</i> <b>(IoT-J)</b></li>
                                 <li><i>
                                       IEEE Transactions on Cloud
                                       Computing <b>(IEEE TCC)</b>
