--- a/index.html
+++ b/index.html
@@ -141,7 +141,20 @@ ourg.">
                           attacking) Blockchain consensus,
                           Blockchain security and privacy,
                           cryptographic key management, and
-                          ledger-based applications.<br><br>
+                        ledger-based applications.<br><br>
+
+
+                      <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
+                        Jumping into the <b>blockchain</b> world can be
+                        quite daunting with the number of papers/wikis
+                        out there. We tried to make it a bit easier
+                        via our 2-year-effort <b>
+                          survey
+                        </b> on blockchain!  Hope this can help a bit! <br><br>
+                        <a href="https://arxiv.org/pdf/1908.08316.pdf">Deconstructing
+                          Blockchains: A Comprehensive Survey on
+                          Consensus, Membership and Structure</a></p>
+                        <br><br>
 
                                <img style="width: 80px; height:
                                            60px;"src="images/news.png" alt="icon"></p>
@@ -507,9 +520,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                            </li>
                               <li>
                             Runchao Han, Haoyu Lin, and Jiangshan
-                            Yu. <br> <b> "On the optionality and
+                            Yu. <br> <b> <a href="https://eprint.iacr.org/2019/896.pdf">"On the optionality and
                             fairness of Atomic
-                            Swaps"</b>, <br> <i>ACM Advances in Financial Technology (<b>AFT</b>)
+                            Swaps"</a></b>, <br> <i>ACM Advances in Financial Technology (<b>AFT</b>)
                             2019.</i>
                               </li>
                           <li>
