--- a/web/pub.html
+++ b/web/pub.html
@@ -158,8 +158,8 @@
                           <li>
                           Dimaz Ankaa Wijaya, Joseph Liu, Ron
                           Steinfeld, Dongxi Liu, Jiangshan
-                          Yu.<br> <b>"On The Unforkability of
-                          Monero"</b>. <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>) 2019.</i>
+                          Yu.<br> <b><a href="https://dl.acm.org/citation.cfm?id=3329823">"On The Unforkability of
+                          Monero"</a></b>. <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>) 2019.</i>
                               </li>
                               <li>
                              Jérémie Decouchant, Antoine Boutet, Jiangshan Yu and Paulo Verissimo<br>
@@ -172,9 +172,9 @@
                              </li>
                               <li>
                             Runchao Han, Haoyu Lin, and Jiangshan
-                            Yu. <br> <b> "On the optionality and
+                            Yu. <br> <b> <a href="https://eprint.iacr.org/2019/896.pdf">"On the optionality and
                             fairness of Atomic
-                            Swaps"</b>, <br> <i>ACM Advances in Financial Technology (<b>AFT</b>)
+                            Swaps"</a></b>, <br> <i>ACM Advances in Financial Technology (<b>AFT</b>)
                             2019.</i>
                               </li>
                           <li>
@@ -237,8 +237,30 @@
                             </li>
                                 <br>
                                     <li><b>Ongoing work:</b><br>
-                      <ul>
-                        <li>
+                                        <ul>
+                                          <li>Christopher Natoli,
+                                            Jiangshan Yu, Vincent
+                                            Gramoli, Paulo Jorge
+                                            Esteves Veríssimo.<br><b>
+                                            <a href="https://arxiv.org/pdf/1908.08316.pdf">Deconstructing
+                                            Blockchains: A
+                                            Comprehensive Survey on
+                                            Consensus, Membership and
+                                              Structure.</a> </b><br><i>CoRR
+                                            abs/1908.08316 </i></li>
+
+                                          <li>Purathani Praitheeshan,
+                                          Lei Pan, Jiangshan Yu,
+                                          Joseph K. Liu, Robin
+                                          Doss.<br><b>
+                                            <a href="https://arxiv.org/pdf/1908.08605.pdf">
+                                              Security Analysis
+                                              Methods on Ethereum
+                                              Smart Contract
+                                              Vulnerabilities: A
+                                              Survey.
+                                              </a> </b><br><i>CoRR abs/1908.08605</i></li>
+                                          <li>
                                 Tong Cao, Jiangshan Yu, Jérémie Decouchant, Xiapu Luo, Paulo Veríssimo.
                                 <br>
                                   <b><a href="https://eprint.iacr.org/2019/411"> Exploring the Monero
