--- a/index.html
+++ b/index.html
@@ -599,10 +599,10 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
           <ol type="circle">
 	    <li>Tong Cao, University of Luxembourg. (Feb.2018-) (Co-supervised with Prof. Paulo Verissimo)</li>
             <li>Runchao Han, Monash University. (Feb.2019-) </li>
-	    <!-- <li>Joao Otavio Massari Chervinski (Exp. Oct.2019-), Monash University.</li> -->
+	    <li>Joao Otavio Massari Chervinski (Oct.2019-), Monash University.</li>
 	    <!-- <li>Liangrong Zhao (Exp. Nov.2019-), Monash University.</li> -->
-	    <!-- <li>Zhimei Sui (Exp. Dec.2019-), Monash University.</li> -->
-	    <!-- <li>Shange Fu (Exp. Dec.2019-), Monash University.</li> -->
+	    <li>Zhimei Sui (Oct.2019-), Monash University.</li>
+	    <li>Shange Fu (Oct.2019-), Monash University.</li>
             </li>
           </ul></font>
           <br>
