--- a/index.html
+++ b/index.html
@@ -583,14 +583,39 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
             </div>
         </div>
 </div>
+<!-- <div id="templatemo-Teaching" > -->
+<!--   <div class="container"> -->
+<!--     <div class="row"> -->
+<!--       <div class="templatemo-line-header" style="margin-top: 0px;" > -->
+<!--         <div class="text-center"> -->
+<!--           <hr class="team_hr team_hr_left -->
+<!--                      hr_gray"/><span class="txt_darkgrey">Teaching</span> -->
+<!--           <hr class="team_hr team_hr_right hr_gray" /> -->
+<!--         </div> -->
+<!--         <br> -->
+<!--         <div class="col-lg-offset-0"><br><br> -->
+<!--           <font size="5"><b>2019</b></font><br><br> -->
+<!--           <font size="4"> -->
+<!--           <ol type="circle"> -->
+<!-- 	    <li>FIT5214 Blockchain</li> -->
+<!--             </li> -->
+<!--           </ul></font> -->
+<!--           <br> -->
+<!--         </div> -->
+<!--         <br class="clearfix"/> -->
+<!--       </div> -->
+<!--       <br class="clearfix"/> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
 <div id="templatemo-Students" >
   <div class="container">
     <div class="row">
       <div class="templatemo-line-header" style="margin-top: 0px;" >
         <div class="text-center">
           <hr class="team_hr team_hr_left
-                     hr_gray"/><span class="txt_darkgrey">Students</span>
-          <hr class="team_hr team_hr_right hr_gray" />
+                     hr_gray"/><span class="txt_darkgrey">Students & Visitors</span>
+          <hr class="team_hr team_hr_right hr_gray" /><br>
         </div>
         <br>
         <div class="col-lg-offset-0"><br><br>
@@ -604,8 +629,16 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 	    <li>Zhimei Sui (Oct.2019-), Monash University.</li>
 	    <li>Shange Fu (Oct.2019-), Monash University.</li>
             </li>
-          </ul></font>
-          <br>
+          </ol></font>
+<br>
+          <!-- <font size="5"><b>Visitors:</b></font><br><br> -->
+          <!-- <font size="4"> -->
+          <!-- <ol type="circle"> -->
+	  <!--   <li><a href="https://wwwfr.uni.lu/snt/people/paulo_esteves_verissimo">Prof. Paulo Verissimo</a>, University of Luxembourg, Luxembourg. (Nov.2019-Dec.2019)</li> -->
+          <!--   <li><a href="http://www.cs.wm.edu/~esmirni/">Prof. Evgenia Smirni</a>, College of William and Mary, US. (Jan.2020-March.2020) </li> -->
+          <!--   </li> -->
+          <!-- </ol></font> -->
+
         </div>
         <br class="clearfix"/>
       </div>
@@ -613,6 +646,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
     </div>
   </div>
 </div>
+
 <div id="templatemo-Awards" >
   <div class="container">
     <div class="row">
