--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ Today,</i> etc.
                             <hr class="team_hr team_hr_right hr_gray" />
                         </div>
 <br><br><br>
-            <div class="col-lg-offset-0" style="margin-left: 2em;margin-right: 1em;">
+            <div class="col-lg-offset-0" style="margin-left: 2em;margin-right: 1em;"><br><br>
               <font size="5">
                           <b>
                             Main research impact:
@@ -412,7 +412,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             hr_gray"/><span class="txt_darkgrey">PUBLICATIONS</span>
                             <hr class="team_hr team_hr_right hr_gray" />
                         </div>
-                        <div class="col-lg-offset-0">
+                        <div class="col-lg-offset-0"><br><br>
                           <font size="5"><b>Selected Recent Publications: </b></font><br><br><font size="4"> 
                               &nbsp;&nbsp;&nbsp;&nbsp;(My <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
                               en"> <b>Google scholar</b></a>
@@ -657,7 +657,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
           <hr class="team_hr team_hr_right hr_gray" />
         </div>
         <br>
-        <div class="col-lg-offset-0">
+        <div class="col-lg-offset-0"><br><br>
           <font size="5"><b>Grant, Awards, and scholarships: </b></font><br><br>
           <font size="4">
 	    <ul type="disc"; style="margin-bottom:
@@ -769,7 +769,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             <hr class="team_hr team_hr_right hr_gray" />
                         </div>
                         <br>
-                              <div class="col-lg-offset-0">
+                              <div class="col-lg-offset-0"><br><br>
                     <font size="5"><b> Professional
                               Activities:
                     </b></font><br><br><font size="4">
