--- a/index.html
+++ b/index.html
@@ -796,8 +796,15 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             <b>2020</b>
                             <ul type="circle">
                               <li>
-                                IEEE International Conference on
-                                Communications <b>(IEEE ICC)</b>
+                                The 40th IEEE International Conference on Distributed Computing Systems <b>(ICDCS)</b>
+                              </li>
+
+                              <li>
+                                The 3rd IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
+                              </li>
+                              <li>
+                                The 54th IEEE International Conference on
+                                Communications <b>(ICC)</b>
                               </li>
                             </ul>
                             <b>2019</b>
@@ -846,7 +853,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               </li>
 
                               <li>
-                                IEEE
+                                The 52th IEEE
                                 International Conference on
                                 Communications <b>(ICC)</b>
                               </li>
