--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@ ourg.">
                         ledger-based applications.<br><br>
 
 
-                      <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
-                        Jumping into the <b>blockchain</b> world can be
-                        quite daunting with the number of papers/wikis
-                        out there. We tried to make it a bit easier
-                        via our 2-year-effort <b>
-                          survey
-                        </b> on blockchain!  Hope this can help a bit! <br><br>
-                        <a href="https://arxiv.org/pdf/1908.08316.pdf">Deconstructing
-                          Blockchains: A Comprehensive Survey on
-                          Consensus, Membership and Structure</a></p>
-                        <br><br>
+                      <!-- <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> -->
+                      <!--   Jumping into the <b>blockchain</b> world can be -->
+                      <!--   quite daunting with the number of papers/wikis -->
+                      <!--   out there. We tried to make it a bit easier -->
+                      <!--   via our 2-year-effort <b> -->
+                      <!--     survey -->
+                      <!--   </b> on blockchain!  Hope this can help a bit! <br><br> -->
+                      <!--   <a href="https://arxiv.org/pdf/1908.08316.pdf">Deconstructing -->
+                      <!--     Blockchains: A Comprehensive Survey on -->
+                      <!--     Consensus, Membership and Structure</a></p> -->
+                      <!--   <br><br> -->
 
                                <img style="width: 80px; height:
                                            60px;"src="images/news.png" alt="icon"></p>
